# QVst

./: .gitmodules  CMakeLists.txt  README.md
cmake/: SMTG_AddSMTGLibrary.cmake  build_library.cmake  build_vst_plugin.cmake  link_libs.cmake  parse_src.cmake
source/: CMakeLists.txt
source/plugins/: CMakeLists.txt
source/plugins/adelay/: CMakeLists.txt
source/plugins/b3_organ/: CMakeLists.txt
source/plugins/b3_organ/include/: PluginController.h  PluginEffect.h  PluginView.h  ids.h  version.h
source/plugins/b3_organ/src/: PluginController.cpp  PluginEffect.cpp  PluginView.cpp  factory.cpp
source/qvst/: CMakeLists.txt
source/qvst/common/: dllmain.cpp
source/qvst/include/: QVstApplication.h  QVstAudioEffect.h  QVstConsole.h  QVstController.h  QVstEditorView.h  QVstHostedWidget.h  QVstParameterContainer.h
source/qvst/src/: QVstApplication.cpp  QVstAudioEffect.cpp  QVstConsole.cpp  QVstController.cpp  QVstEditorView.cpp  QVstHostedWidget.cpp  QVstParameterContainer.cpp
source/synth/: CMakeLists.txt
source/synth/include/: ADSR.h  AudioProcessor.h  Functions.h  Generator.h  HammondOrgan.h  HammondVoice.h  IAudioProcessor.h  INotesListener.h  Instrument.h  Voice.h
source/synth/src/: ADSR.cpp  AudioProcessor.cpp  HammondOrgan.cpp  HammondVoice.cpp  Voice.cpp
